--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 
 version = "1.0"
-group = "felixnemis.gj.testmod" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "testmod"
+group = "felixnemis.gj.ictjam4" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "ictjam4"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
@@ -74,4 +74,11 @@ processResources {
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
+}
+task deobfJar(type: Jar, dependsOn: 'jar') {
+    from "build/source/main"
+    classifier "dev"
+}
+artifacts {
+    archives deobfJar
 }
